<resources>
    <string name="app_name">Clicket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <string name="website">www.clicket.be</string>
    <string name="my_clicket">My Clicket</string>
    <string name="parking">Parking</string>
    <string name="login">Already have an account? Login here</string>
    <string name="register">Dont\'t have an account? Register here</string>
    <string name="user">Niels Bril</string>
    <string name="email">niels.bril@hotmail.com</string>
    <string name="invoice_amount">Invoice amount</string>
    <string name="information">Information</string>
    <string name="session">Current session</string>
    <string name="actions">Actions</string>
    <string name="started_on">Started:</string>
    <string name="stopped_on">Stopped:</string>
    <string name="zone">Zone:</string>
    <string name="car">Car:</string>
    <string name="cost">Cost:</string>

    <string name="nav_park">Park</string>
    <string name="nav_account">Account</string>
    <string name="nav_cars">Cars</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_history">History</string>

    <string name="d_logo">logo</string>
    <string name="d_euro">euro</string>

    <string name="h_email">Email</string>
    <string name="h_lastname">Lastname</string>
    <string name="h_firstname">Firstname</string>
    <string name="h_phone">Phone (0032499999999)</string>
    <string name="h_phone_clean">Phone</string>
    <string name="h_password">Password</string>
    <string name="h_confirm_password">Confirm password</string>
    <string name="h_user">User</string>
    <string name="h_car">Name</string>
    <string name="h_license_plate">License plate</string>

    <string name="l_default">Default:</string>

    <string name="cars_prompt">Choose a car</string>
    <string-array name="cars">
        <item>No cars</item>
    </string-array>

    <string formatted="false" name="f_car">%s (%s)</string>
    <string formatted="false" name="f_double">€ %.2f</string>

</resources>