<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="be.nielsbril.clicket.app.viewmodels.ParkFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llSessionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/customSubtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/session" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSessionTitle"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/started_on"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.started_on}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/stopped_on"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.stopped_on}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/zone"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.zone}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/car"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.car}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/cost"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{@string/f_double(viewmodel.cost)}" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSession"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/customSubtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/actions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llActionsTitle"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:entries="@array/cars"
                android:prompt="@string/cars_prompt">

            </Spinner>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent"
                android:padding="12dp"
                android:text="@string/btn_start"
                android:textColor="@color/colorPrimaryDark" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/colorPrimaryDark"
                android:enabled="false"
                android:padding="12dp"
                android:text="@string/btn_stop"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/colorCard"
                android:padding="12dp"
                android:text="@string/btn_history"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </RelativeLayout>

</layout>