<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="be.nielsbril.clicket.app.viewmodels.AccountFragmentViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/llAmountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/customSubtitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/invoice_amount" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAmount"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@id/llAmountTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/d_euro"
                    android:src="@drawable/ic_euro_symbol_black_24dp" />

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@{viewmodel.getUser().getInvoice_amount()}"
                    android:textSize="72sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFieldsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llAmount"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/customSubtitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/information" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llFieldsTitle"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorAccent">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txbUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/h_user"
                        android:inputType="text"
                        android:text="@{viewmodel.getUser().getFirstname() + ' ' + viewmodel.getUser().getName()}"
                        app:backgroundTint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorAccent">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txbEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/h_email"
                        android:inputType="text"
                        android:text="@{viewmodel.getUser().getEmail()}"
                        app:backgroundTint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorAccent">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txbPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/h_phone_clean"
                        android:inputType="text"
                        android:text="@{viewmodel.getUser().getPhone()}"
                        app:backgroundTint="@color/colorAccent" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_mode_edit_white_24dp"
            android:tint="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimaryDark" />

    </android.support.design.widget.CoordinatorLayout>

</layout>