<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="be.nielsbril.clicket.app.viewmodels.AddCarFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorText">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txbCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/h_car"
                    android:inputType="textCapWords"
                    app:backgroundTint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorText">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txbLicensePlate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/h_license_plate"
                    android:inputType="textCapCharacters"
                    app:backgroundTint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/l_default"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/chDefaultCar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center" />

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fabSave"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_keyboard_backspace_white_24dp"
            android:tint="@color/colorPrimaryDark"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_save_white_24dp"
            android:tint="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimaryDark" />

    </RelativeLayout>

</layout>